// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaultChildren should render the toggle icon with "on" equals to false 1`] = `
Array [
  <input
    aria-label="Type and search"
    className="search"
    onChange={[Function]}
    placeholder="Type and search"
    type="search"
  />,
  <ul
    className="tree-item-group"
  >
    <Component
      hasNodes={true}
      isOpen={false}
      key="key"
      label="foo"
      level={1}
      onClick={[Function]}
    >
      <li
        className="tree-item"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "paddingLeft": "2.5rem",
          }
        }
      >
        <div
          className="toggle-icon"
          onClick={[Function]}
        >
          <ToggleIcon
            on={false}
          >
            <div
              aria-label="Toggle"
              className="toggle-icon-symbol"
              role="img"
            >
              +
            </div>
          </ToggleIcon>
        </div>
        foo
      </li>
    </Component>
  </ul>,
]
`;

exports[`defaultChildren should render the toggle icon with "on" equals to true 1`] = `
Array [
  <input
    aria-label="Type and search"
    className="search"
    onChange={[Function]}
    placeholder="Type and search"
    type="search"
  />,
  <ul
    className="tree-item-group"
  >
    <Component
      hasNodes={true}
      isOpen={true}
      key="foo"
      label="foo"
      level={1}
      onClick={[Function]}
    >
      <li
        className="tree-item"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "paddingLeft": "2.5rem",
          }
        }
      >
        <div
          className="toggle-icon"
          onClick={[Function]}
        >
          <ToggleIcon
            on={true}
          >
            <div
              aria-label="Toggle"
              className="toggle-icon-symbol"
              role="img"
            >
              -
            </div>
          </ToggleIcon>
        </div>
        foo
      </li>
    </Component>
    <Component
      hasNodes={false}
      isOpen={false}
      key="bar"
      label="bar"
      level={2}
      onClick={[Function]}
    >
      <li
        className="tree-item"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "paddingLeft": "6.25rem",
          }
        }
      >
        bar
      </li>
    </Component>
    <Component
      hasNodes={false}
      isOpen={false}
      key="zoo"
      label="zoo"
      level={2}
      onClick={[Function]}
    >
      <li
        className="tree-item"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "paddingLeft": "6.25rem",
          }
        }
      >
        zoo
      </li>
    </Component>
  </ul>,
]
`;

exports[`defaultChildren should render without the toggle icon 1`] = `
Array [
  <input
    aria-label="Type and search"
    className="search"
    onChange={[Function]}
    placeholder="Type and search"
    type="search"
  />,
  <ul
    className="tree-item-group"
  >
    <Component
      hasNodes={false}
      isOpen={false}
      key="key"
      label="foo"
      level={0}
      onClick={[Function]}
    >
      <li
        className="tree-item"
        onClick={[Function]}
        role="button"
        style={
          Object {
            "paddingLeft": "2.75rem",
          }
        }
      >
        foo
      </li>
    </Component>
  </ul>,
]
`;
